# ml-basics

./: .gitignore  1bit_adder.cpp  CMakeLists.txt  README.md  main.cpp  mli.h  nbit_adder.cpp  neural.h  neuralmath.h  or_gate.cpp  png_to_raw.h  xor_gate.cpp
examples/: 1bit_adder.cpp  2x+1.cpp  digit_recognizer.cpp  nbit_adder.cpp  or_gate.cpp  xor_gate.cpp
